--- a/.harness/Manisha.yaml
+++ b/.harness/Manisha.yaml
@@ -33,3 +33,12 @@ pipeline:
                   spec:
                     shell: Sh
                     command: echo "Welcome to Harness CI"
+              - step:
+                  type: BuildAndPushDockerRegistry
+                  name: BuildAndPushDockerRegistry_1
+                  identifier: BuildAndPushDockerRegistry_1
+                  spec:
+                    connectorRef: account.harnessImage
+                    repo: <+input>
+                    tags: <+input>
+                    caching: true
