Update pipeline Manisha

--- a/.harness/Manisha.yaml
+++ b/.harness/Manisha.yaml
@@ -33,3 +33,7 @@ pipeline:
                   spec:
                     shell: Sh
                     command: echo "Welcome to Harness CI"
+        delegateSelectors:
+          - docker-delegate
+        when:
+          pipelineStatus: All
