--- a/.harness/Manisha.yaml
+++ b/.harness/Manisha.yaml
@@ -59,3 +59,5 @@ pipeline:
         delegateSelectors:
           - docker-delegate
           - docker-delegate-tx
+          - linux-delegate-tx
+          - linux-tx
