Update pipeline Manisha

--- a/.harness/Manisha.yaml
+++ b/.harness/Manisha.yaml
@@ -56,3 +56,9 @@ pipeline:
                   spec:
                     shell: Sh
                     command: echo "starting the build"
+        delegateSelectors:
+          - linux-delegate-tx
+          - linux-delegate-tx-w
+          - linux-tx
+          - docker-delegate-tx
+          - docker-delegate
