Update pipeline Manisha

--- a/.harness/Manisha.yaml
+++ b/.harness/Manisha.yaml
@@ -19,7 +19,7 @@ pipeline:
         spec:
           cloneCodebase: true
           platform:
-            os: Linux
+            os: Windows
             arch: Amd64
           runtime:
             type: Docker
